--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "ytmusic-urls",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js"
+    "build": "esbuild index.js --bundle --platform=neutral --format=esm --outfile=dist/index.js --external:fs --external:http --external:https --external:stream",
+    "deploy": "npm run build && wrangler deploy dist/index.js"
+  },
+  "devDependencies": {
+    "esbuild": "^0.20.2"
   },
   "dependencies": {
     "@distube/ytdl-core": "^4.16.12",
-    "express": "^4.18.2"
+    "hono": "^4.9.0"
   }
 }
