--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "esbuild": "^0.20.2"
   },
   "dependencies": {
-    "@distube/ytdl-core": "^4.16.12",
+    "@ybd-project/ytdl-core": "^6.0.8",
     "hono": "^4.9.0"
   }
 }
